*SVN*

* Don't generate a components directory in new Rails apps.  [Jeremy Kemper]

* Fixed script/process/spawner to work properly with Mongrel including in -r (daemonize mode) [DHH]

* Added one-letter aliases for the three default environments to script/console, so script/console p will load the production environment (t for test, d for development) [DHH]

* Fixed that script/server running against Mongrel should tail the proper log regardless of the environment [DHH]

* Update initializer to load Rails::VERSION as soon as possible. Closes #6698. [Nicholas Seckar]

* Added ActiveRecord::Base.clear_active_connections! in development mode so the database connection is not carried over from request to request. Some databases won't reread the schema if that doesn't happen (I'm looking at you SQLite), so you have to restart the server after each migration (= no fun) [DHH]

* Made RAILS_GEM_VERSION work for beta gems too, so specifying 1.1.6 will give you 1.1.6.4520 if available [DHH]

* Update to Prototype and script.aculo.us [5579]. [Thomas Fuchs]

* Made script/server work with -e and -d when using Mongrel [DHH]

* Update to Prototype 1.5.0_rc2 [5550] which makes it work in Opera again [Thomas Fuchs]

* Make sure that exceptions which are thrown outside of the user code try their best to be handeled in ApplicationController#rescue_action [Tobias Luetke]

* Rails::VERSION::STRING should always be available without having to require 'rails/version'.  #6244 [fearoffish]

* Update to Prototype 1.5.0_rc2. [Sam Stephenson]

* Add grep-based fallback to reaper, to work in pidless setups [Jamis Buck]

* Only wrap request processing with our USR1 signal handler so FastCGI can trap it and raise an exception while waiting for connections. Idle processes exit immediately rather than waiting for another request; active processes gracefully exit when the request is finished.  [Jeremy Kemper]
